# linalg-kernels

./: Cargo.toml  build.rs  readme.md  rust-toolchain.toml
.cargo/: config.toml
benches/: common.rs  l1.rs  l1_f32.rs  l1_f64.rs  l1_results.txt  l2.rs  l2_f32.rs  l2_f32_results.txt  l2_f64.rs  l2_f64_results.txt  l2_results.txt  l3_f32.rs  l3_f32_results.txt  l3_f32_small_matrices.rs  l3_f64.rs  l3_f64_results.txt  l3_f64_small_matrices.rs  plot.py
benches/_gemm_results/: blas=accelerate.txt  blas=blis.txt  blas=openblas.txt  f32_blas=BLIS.txt  f32_blas=BLIS_small_matrices.txt  f32_blas=accelerate.txt  f32_blas=accelerate_small_matrices.txt  f32_blas=openblas.txt  f32_blas=openblas_small_matrices.txt  f64_blas=BLIS.txt  f64_blas=BLIS_small_matrices.txt  f64_blas=accelerate.txt  f64_blas=accelerate_small_matrices.txt  f64_blas=openblas.txt  f64_blas=openblas_small_matrices.txt
benches/_level1_results/: f32_results.txt  f64_results.txt
benches/_level2_results/: f32_results.txt  f64_results.txt
benches/results/: benchmark_plots.toc
benches/results/accelerate/f32/: level1.txt  level2.txt  level3.txt
benches/results/accelerate/f64/: level1.txt  level2.txt  level3.txt
benches/results/blis/f32/: level1.txt  level2.txt  level3.txt
benches/results/blis/f64/: level1.txt  level2.txt  level3.txt
benches/results/openblas/f32/: level1.txt  level2.txt  level3.txt
benches/results/openblas/f64/: level1.txt  level2.txt  level3.txt
design_notes/: lak1.aux  lak1.fdb_latexmk  lak1.fls  lak1.listing  lak1.out  lak1.tex  lak2.aux  lak2.fdb_latexmk  lak2.fls  lak2.listing  lak2.out  lak2.tex
src/: errors.rs  helpers.rs  lib.rs  traits.rs  types.rs
src/asm/: faxpy_panel.s  faxpy_row_blocked.s  gemm_new.s  gemm_old.s  reference_faxpy.s  sasum.s  saxpy.s  sdot.s  sgemv.s
src/blas/: helpers.rs  mod.rs
src/blas/l1/: asum.rs  axpy.rs  copy.rs  dot.rs  iamax.rs  mod.rs  nrm2.rs  scal.rs  swap.rs
src/blas/l2/: gemv.rs  ger.rs  mod.rs  trmv.rs  trsv.rs
src/blas/l3/: gemm.rs  mod.rs
src/fused/: faxpy.rs  ftrmsv.rs  ftrmv.rs  mod.rs
src/l1/: asum.rs  axpy.rs  copy.rs  dot.rs  iamax.rs  mod.rs  nrm2.rs  scal.rs  swap.rs
src/l2/: gemv.rs  ger.rs  mod.rs  trmv.rs  trsv.rs
src/l3/: gemm.rs  gemm_nn.rs  microkernel.rs  mod.rs
src/l3/gemm/: gemm.rs  gemm_nn.rs  mod.rs  nn_blocked.rs  nn_blocked_microkernel.rs  nn_direct.rs  nn_direct_microkernel.rs  nt_blocked.rs  nt_blocked_microkernel.rs  nt_direct.rs  nt_direct_microkernel.rs  tn_blocked.rs  tn_blocked_microkernel.rs  tt_blocked.rs  tt_blocked_microkernel.rs
tests/: common.rs  l1.rs  l2.rs  l3.rs
tests/l1/: asum.rs  axpy.rs  copy.rs  dot.rs  iamax.rs  nrm2.rs  scal.rs  swap.rs
tests/l2/: gemv.rs  ger.rs  trmv.rs  trsv.rs
tests/l3/: gemm.rs  gemm_short.rs  gemm_tall.rs
