[package]
name = "lak"
version = "0.1.0"
edition = "2024"

[dependencies]
blas-src = { version = "0.12", optional = true, default-features = false }
rand = "0.8" 

[dev-dependencies] 
cblas-sys = { version = "0.1", default-features = false }
divan = "0.1.21"

[features] 
accelerate = ["blas-src/accelerate"]
openblas   = ["blas-src/openblas"] 

[[bench]]
name = "l1"
harness = false

[[bench]] 
name = "l2_f32" 
harness = false

[[bench]] 
name = "l2_f64" 
harness = false

[[bench]] 
name = "l3_f32" 
harness = false 

[[bench]] 
name = "l3_f64" 
harness = false
