[package]
name = "lak"
version = "0.1.0"
edition = "2024"

[dependencies]
blas-src = { version = "0.12", optional = true, default-features = false }
rand = "0.8" 

[dev-dependencies] 
cblas-sys = { version = "0.1", default-features = false }
divan = "0.1.21"
faer = { version = "0.24", default-features = true }

[features]
accelerate = ["dep:blas-src", "blas-src/accelerate"]
openblas   = ["dep:blas-src", "blas-src/openblas"]
blis       = [] # I use homebrew; this doesn't compile properly

[[bench]]
name = "l1_f32"
harness = false

[[bench]] 
name = "l1_f64"
harness = false 

[[bench]] 
name = "l2_f32" 
harness = false

[[bench]] 
name = "l2_f64" 
harness = false

[[bench]] 
name = "l3_f32" 
harness = false 

[[bench]] 
name = "l3_f64" 
harness = false

[[bench]] 
name = "l3_f32_small_matrices" 
harness = false 

[[bench]] 
name = "l3_f64_small_matrices" 
harness = false

