[package]
name = "lak-kernels"
version = "0.1.0"
edition = "2024"
description = "BLAS-like linear algebra kernels in fully-safe Rust."
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/deval-d/lak"
build = false
autobins = false
autobenches = false
include = [
    "Cargo.toml",
    "readme.md",
    "rust-toolchain.toml",
    "src/lib.rs",
    "src/types.rs",
    "src/traits.rs",
    "src/helpers.rs",
    "src/l1/*.rs",
    "src/l2/*.rs",
    "src/l3/*.rs",
    "src/l3/gemm/*.rs",
    "src/fused/*.rs",
    "src/blas/*.rs",
    "src/blas/l1/*.rs",
    "src/blas/l2/*.rs",
    "src/blas/l3/*.rs",
    "tests/*.rs",
    "tests/l1/*.rs",
    "tests/l2/*.rs",
    "tests/l3/*.rs",
    "benches/*.rs",
]
authors     = ["deval deliwala <deval-d@stanford.edu>"] 

[lib]
name = "lak"
path = "src/lib.rs"

[dependencies]
blas-src = { version = "0.12", optional = true, default-features = false }
rand = "0.8" 

[dev-dependencies] 
cblas-sys = { version = "0.1", default-features = false }
divan = "0.1.21"
faer = { version = "0.24", default-features = true }

[features]
accelerate = ["dep:blas-src", "blas-src/accelerate"]
openblas   = ["dep:blas-src", "blas-src/openblas"]
blis       = [] # I use homebrew; this doesn't compile properly

[[bench]]
name = "l1_f32"
harness = false

[[bench]] 
name = "l1_f64"
harness = false 

[[bench]] 
name = "l2_f32" 
harness = false

[[bench]] 
name = "l2_f64" 
harness = false

[[bench]] 
name = "l3_f32" 
harness = false 

[[bench]] 
name = "l3_f64" 
harness = false
